--- a/frontend/src/Components/Tasks/TaskManagement.css
+++ b/frontend/src/Components/Tasks/TaskManagement.css
@@ -25,7 +25,7 @@
 }
 
 .project-description {
-  color: #9f9f9ffa;
+  color: #000;
   font-family: 'Times New Roman', Times, serif;
   margin: 0;
   font-size: 1.3rem;
