--- a/frontend/src/Components/Tasks/TaskManagement.css
+++ b/frontend/src/Components/Tasks/TaskManagement.css
@@ -11,11 +11,14 @@
 }
 
 .header-content {
-  max-width: 1200px;
   padding: 0 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header-left{
+  display: flex;
 }
 
 .header-left h1 {
